# c_json_template

./: CMakeLists.txt
include/: person.h  reader.h
res/: test.json
src/: main.c  person.c  reader.c
